--- a/First-graph-for-project.html
+++ b/First-graph-for-project.html
@@ -244,12 +244,12 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
 <span id="cb9-33"><a href="#cb9-33" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
 
-<div id="szjlnnosgu" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="gyabmavzhq" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#szjlnnosgu .gt_table {
+#gyabmavzhq .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -274,7 +274,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-left-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_heading {
+#gyabmavzhq .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -286,7 +286,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_title {
+#gyabmavzhq .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -298,7 +298,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-width: 0;
 }
 
-#szjlnnosgu .gt_subtitle {
+#gyabmavzhq .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -310,13 +310,13 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-top-width: 0;
 }
 
-#szjlnnosgu .gt_bottom_border {
+#gyabmavzhq .gt_bottom_border {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_col_headings {
+#gyabmavzhq .gt_col_headings {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -331,7 +331,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_col_heading {
+#gyabmavzhq .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -351,7 +351,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   overflow-x: hidden;
 }
 
-#szjlnnosgu .gt_column_spanner_outer {
+#gyabmavzhq .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -363,15 +363,15 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 4px;
 }
 
-#szjlnnosgu .gt_column_spanner_outer:first-child {
+#gyabmavzhq .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#szjlnnosgu .gt_column_spanner_outer:last-child {
+#gyabmavzhq .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#szjlnnosgu .gt_column_spanner {
+#gyabmavzhq .gt_column_spanner {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -383,7 +383,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   width: 100%;
 }
 
-#szjlnnosgu .gt_group_heading {
+#gyabmavzhq .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -408,7 +408,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: middle;
 }
 
-#szjlnnosgu .gt_empty_group_heading {
+#gyabmavzhq .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -423,15 +423,15 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: middle;
 }
 
-#szjlnnosgu .gt_from_md > :first-child {
+#gyabmavzhq .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#szjlnnosgu .gt_from_md > :last-child {
+#gyabmavzhq .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#szjlnnosgu .gt_row {
+#gyabmavzhq .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -450,7 +450,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   overflow-x: hidden;
 }
 
-#szjlnnosgu .gt_stub {
+#gyabmavzhq .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -463,7 +463,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#szjlnnosgu .gt_stub_row_group {
+#gyabmavzhq .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -477,11 +477,11 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   vertical-align: top;
 }
 
-#szjlnnosgu .gt_row_group_first td {
+#gyabmavzhq .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#szjlnnosgu .gt_summary_row {
+#gyabmavzhq .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -491,16 +491,16 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#szjlnnosgu .gt_first_summary_row {
+#gyabmavzhq .gt_first_summary_row {
   border-top-style: none;
   border-top-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_first_summary_row.thick {
+#gyabmavzhq .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#szjlnnosgu .gt_last_summary_row {
+#gyabmavzhq .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -510,7 +510,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_grand_summary_row {
+#gyabmavzhq .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -520,7 +520,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#szjlnnosgu .gt_first_grand_summary_row {
+#gyabmavzhq .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -530,11 +530,11 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-top-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_striped {
+#gyabmavzhq .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#szjlnnosgu .gt_table_body {
+#gyabmavzhq .gt_table_body {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -543,7 +543,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-bottom-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_footnotes {
+#gyabmavzhq .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -557,7 +557,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_footnote {
+#gyabmavzhq .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -566,7 +566,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#szjlnnosgu .gt_sourcenotes {
+#gyabmavzhq .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -580,7 +580,7 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   border-right-color: #D3D3D3;
 }
 
-#szjlnnosgu .gt_sourcenote {
+#gyabmavzhq .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -588,64 +588,64 @@ dbl (10): Rk, W, L, W-L%, R, RA, Rdiff, SOS, SRS, Luck
   padding-right: 5px;
 }
 
-#szjlnnosgu .gt_left {
+#gyabmavzhq .gt_left {
   text-align: left;
 }
 
-#szjlnnosgu .gt_center {
+#gyabmavzhq .gt_center {
   text-align: center;
 }
 
-#szjlnnosgu .gt_right {
+#gyabmavzhq .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#szjlnnosgu .gt_font_normal {
+#gyabmavzhq .gt_font_normal {
   font-weight: normal;
 }
 
-#szjlnnosgu .gt_font_bold {
+#gyabmavzhq .gt_font_bold {
   font-weight: bold;
 }
 
-#szjlnnosgu .gt_font_italic {
+#gyabmavzhq .gt_font_italic {
   font-style: italic;
 }
 
-#szjlnnosgu .gt_super {
+#gyabmavzhq .gt_super {
   font-size: 65%;
 }
 
-#szjlnnosgu .gt_footnote_marks {
+#gyabmavzhq .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#szjlnnosgu .gt_asterisk {
+#gyabmavzhq .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#szjlnnosgu .gt_indent_1 {
+#gyabmavzhq .gt_indent_1 {
   text-indent: 5px;
 }
 
-#szjlnnosgu .gt_indent_2 {
+#gyabmavzhq .gt_indent_2 {
   text-indent: 10px;
 }
 
-#szjlnnosgu .gt_indent_3 {
+#gyabmavzhq .gt_indent_3 {
   text-indent: 15px;
 }
 
-#szjlnnosgu .gt_indent_4 {
+#gyabmavzhq .gt_indent_4 {
   text-indent: 20px;
 }
 
-#szjlnnosgu .gt_indent_5 {
+#gyabmavzhq .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -839,7 +839,7 @@ dbl (35): #P, PAge, RA/G, W, L, W-L%, ERA, G, GS, GF, CG, tSho, cSho, SV, IP...
 <span id="cb21-3"><a href="#cb21-3" aria-hidden="true" tabindex="-1"></a>    <span class="fu">geom_point</span>(<span class="at">data=</span>phils, <span class="fu">aes</span>(<span class="at">x=</span>ERA, <span class="at">y=</span>BA), <span class="at">color=</span><span class="st">"#E81828"</span>) <span class="sc">+</span></span>
 <span id="cb21-4"><a href="#cb21-4" aria-hidden="true" tabindex="-1"></a>  <span class="fu">coord_flip</span>()<span class="sc">+</span> </span>
 <span id="cb21-5"><a href="#cb21-5" aria-hidden="true" tabindex="-1"></a>  </span>
-<span id="cb21-6"><a href="#cb21-6" aria-hidden="true" tabindex="-1"></a>  <span class="fu">geom_point</span>(<span class="at">data=</span>phils, <span class="fu">aes</span>(<span class="at">x=</span><span class="st">`</span><span class="at">ERA</span><span class="st">`</span>, <span class="at">y=</span><span class="st">`</span><span class="at">BA</span><span class="st">`</span>), <span class="at">color=</span><span class="st">"red"</span>) <span class="sc">+</span> </span>
+<span id="cb21-6"><a href="#cb21-6" aria-hidden="true" tabindex="-1"></a>  <span class="fu">geom_point</span>(<span class="at">data=</span>phils, <span class="fu">aes</span>(<span class="at">x=</span><span class="st">`</span><span class="at">ERA</span><span class="st">`</span>, <span class="at">y=</span><span class="st">`</span><span class="at">BA</span><span class="st">`</span>), <span class="at">color=</span><span class="st">"#E81828"</span>) <span class="sc">+</span> </span>
 <span id="cb21-7"><a href="#cb21-7" aria-hidden="true" tabindex="-1"></a>  <span class="fu">geom_text_repel</span>(<span class="at">data=</span>phils, <span class="fu">aes</span>(<span class="at">x=</span><span class="st">`</span><span class="at">ERA</span><span class="st">`</span>, <span class="at">y=</span><span class="st">`</span><span class="at">BA</span><span class="st">`</span>, <span class="at">label=</span><span class="st">"Phillies"</span>)) <span class="sc">+</span></span>
 <span id="cb21-8"><a href="#cb21-8" aria-hidden="true" tabindex="-1"></a>    </span>
 <span id="cb21-9"><a href="#cb21-9" aria-hidden="true" tabindex="-1"></a>  <span class="fu">geom_vline</span>(<span class="at">xintercept =</span> <span class="fl">3.96</span>) <span class="sc">+</span> </span>
@@ -848,14 +848,14 @@ dbl (35): #P, PAge, RA/G, W, L, W-L%, ERA, G, GS, GF, CG, tSho, cSho, SV, IP...
 <span id="cb21-12"><a href="#cb21-12" aria-hidden="true" tabindex="-1"></a>  <span class="fu">labs</span>(</span>
 <span id="cb21-13"><a href="#cb21-13" aria-hidden="true" tabindex="-1"></a>    <span class="at">x=</span><span class="st">"ERA"</span>, </span>
 <span id="cb21-14"><a href="#cb21-14" aria-hidden="true" tabindex="-1"></a>    <span class="at">y=</span><span class="st">"Offensive Batting Average"</span>, </span>
-<span id="cb21-15"><a href="#cb21-15" aria-hidden="true" tabindex="-1"></a>    <span class="at">title=</span><span class="st">"Philadelphia was average in team ERA, </span><span class="sc">\n</span><span class="st"> and not amazing at hitting."</span>, </span>
+<span id="cb21-15"><a href="#cb21-15" aria-hidden="true" tabindex="-1"></a>    <span class="at">title=</span><span class="st">"Philadelphia was average in team ERA, </span><span class="sc">\n</span><span class="st">not amazing at hitting."</span>, </span>
 <span id="cb21-16"><a href="#cb21-16" aria-hidden="true" tabindex="-1"></a>    <span class="at">subtitle=</span><span class="st">"The Phillies had an okay regular season in many aspects."</span>,</span>
 <span id="cb21-17"><a href="#cb21-17" aria-hidden="true" tabindex="-1"></a>    <span class="at">caption =</span> <span class="st">"Source: Sports Reference | By Lucas Wilkinson"</span>) <span class="sc">+</span> </span>
 <span id="cb21-18"><a href="#cb21-18" aria-hidden="true" tabindex="-1"></a>  <span class="fu">theme_minimal</span>() <span class="sc">+</span> </span>
 <span id="cb21-19"><a href="#cb21-19" aria-hidden="true" tabindex="-1"></a>  <span class="fu">theme</span>(</span>
 <span id="cb21-20"><a href="#cb21-20" aria-hidden="true" tabindex="-1"></a>    <span class="at">plot.title =</span> <span class="fu">element_text</span>(<span class="at">size =</span> <span class="dv">20</span>, <span class="at">face =</span> <span class="st">"bold"</span>),</span>
-<span id="cb21-21"><a href="#cb21-21" aria-hidden="true" tabindex="-1"></a>    <span class="at">axis.title =</span> <span class="fu">element_text</span>(<span class="at">size =</span> <span class="dv">8</span>), </span>
-<span id="cb21-22"><a href="#cb21-22" aria-hidden="true" tabindex="-1"></a>    <span class="at">plot.subtitle =</span> <span class="fu">element_text</span>(<span class="at">size=</span><span class="dv">10</span>) </span>
+<span id="cb21-21"><a href="#cb21-21" aria-hidden="true" tabindex="-1"></a>    <span class="at">axis.title =</span> <span class="fu">element_text</span>(<span class="at">size =</span> <span class="dv">8</span>, <span class="at">face =</span> <span class="st">"bold"</span>), </span>
+<span id="cb21-22"><a href="#cb21-22" aria-hidden="true" tabindex="-1"></a>    <span class="at">plot.subtitle =</span> <span class="fu">element_text</span>(<span class="at">size=</span><span class="dv">10</span>,) </span>
 <span id="cb21-23"><a href="#cb21-23" aria-hidden="true" tabindex="-1"></a>  )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
 <p><img src="First-graph-for-project_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid" width="672"></p>
