--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Lucas Wilkinson">
 <meta name="dcterms.date" content="2023-05-11">
 
-<title>NCAA Post Mortem - Top Five Rookies to Draft in Fantasy</title>
+<title>Lucas Wilkinson - Top Five Rookies to Draft in Fantasy</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -73,7 +73,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">NCAA Post Mortem</span>
+    <span class="navbar-title">Lucas Wilkinson</span>
     </a>
   </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
